# VanceSender

./: .gitignore  AGENTS.md  API.md  CNAME  README.md  basedpyrightconfig.json  build.bat  config.yaml.example  main.py  make_icon.py  public-config.yaml  pyproject.toml  pyrightconfig.json  requirements.txt  start.bat  vancesender.spec
.github/workflows/: ci.yml  deploy-pages-docs.yml  package-beta.yml  package-tauri-beta.yml  package-tauri.yml  package-windows.yml
app/api/: auth.py  schemas.py
app/api/routes/: __init__.py  ai.py  presets.py  relay.py  sender.py  settings.py
app/core/: ai_client.py  ai_history.py  app_meta.py  config.py  desktop_shell.py  history.py  network.py  notifications.py  overlay_status.py  port_guard.py  presets.py  public_config.py  quick_overlay.py  relay_client.py  runtime_paths.py  sender.py  stats.py  update_checker.py
app/web/: help.html  index.html  intro.html
app/web/css/: help.css  intro.css  style.css
app/web/js/: app.js  help.js  i18n.js
docs/: API.md  github-pages.md  update-check-optimization.md  windows-start-bat.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs
frontend/src/api/: ai.ts  client.ts  presets.ts  sender.ts  settings.ts  stats.ts
frontend/src/components/common/: AuthGate.vue  OnboardingGuide.vue  TagFilter.vue
frontend/src/components/home/: HeroCard.vue  ResourcesCard.vue  StatsCard.vue  UpdateCard.vue
frontend/src/components/layout/: AppSidebar.vue  DesktopTitlebar.vue  MobileTabBar.vue
frontend/src/components/presets/: PresetEditModal.vue
frontend/src/components/send/: EditTextModal.vue  ImportTextModal.vue  SavePresetModal.vue  TextListItem.vue
frontend/src/components/ui/: VButton.vue  VCard.vue  VEmpty.vue  VModal.vue  VProgressBar.vue  VToast.vue
frontend/src/composables/: useAIStream.ts  useAuth.ts  useCache.ts  useDesktop.ts  useOnboarding.ts  useToast.ts  useWebSocket.ts
frontend/src/i18n/: en.ts  index.ts  zh-CN.ts
frontend/src/router/: index.ts
frontend/src/stores/: ai.ts  app.ts  presets.ts  sender.ts  settings.ts  stats.ts
frontend/src/styles/: animations.css  base.css  glassmorphism.css  variables.css
frontend/src/types/: api.ts
frontend/src/views/: AIGenerateView.vue  HomeView.vue  PresetsView.vue  QuickSendView.vue  SendView.vue  SettingsView.vue
pages/: help.html  index.html
tests/: test_api_smoke.py
